--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,7 @@
     "name": "ekok/php-validation",
     "description": "PHP Validation",
     "type": "library",
-    "require": {
-        "php": ">=8.0"
-    },
     "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "Ekok\\Validation\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "classmap": ["tests/fixtures/classes"]
-    },
     "authors": [
         {
             "name": "Eko Kurniawan",
@@ -21,7 +10,16 @@
         }
     ],
     "minimum-stability": "stable",
+    "require": {
+        "php": ">=8.0",
+        "ekok/php-utils": "dev-master"
+    },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "Ekok\\Validation\\": "src/"
+        }
     }
 }
