--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "ekok/php-validation",
     "description": "PHP Validation",
     "type": "library",
+    "minimum-stability": "stable",
     "license": "MIT",
     "authors": [
         {
@@ -9,17 +10,18 @@
             "email": "setiawanegho@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "autoload": {
+        "psr-4": {
+            "Ekok\\Validation\\": "src/"
+        }
+    },
     "require": {
         "php": ">=8.0",
         "ekok/php-utils": "dev-master"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
-    },
-    "autoload": {
-        "psr-4": {
-            "Ekok\\Validation\\": "src/"
-        }
+        "codeception/codeception": "~4.1",
+        "codeception/module-phpbrowser": "^1.0.0",
+        "codeception/module-asserts": "^1.0.0"
     }
 }
